added courses pdf

--- a/app/Resources/views/desktop/courses/animation_film.html.twig
+++ b/app/Resources/views/desktop/courses/animation_film.html.twig
@@ -6,24 +6,24 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/animation-film/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/animation-film/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img1.png') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img3.png') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" /></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/animation-film/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/animation-film/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img2.png') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img4.png') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" /></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/animation-film/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/animation-film/img3.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/animation-film/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/animation-film/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img1.png') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img3.png') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img2.png') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img4.png') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" /></li>
                     </ul>
                 </div>
             </div>
@@ -69,14 +69,14 @@
                         <br><br>
                         Hemos preparado este curso especialmente para ti, siendo uno de los mas completos y competitivos, una vez terminado el curso, podr&aacute;s demostrar como profesional ser competitivo en todos los campos del dise&ntilde;o 3D.
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}">
+                <a href="{{ asset('sboza2/docs/08-GRADO-PROFESIONAL-EN-DE-CINE-ANIMACION-3D-VIDEOJUEGOS-E-ILUSTRACION.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" ></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/animation-film/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/animation-film/icon-course.svg') }}" alt="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" title="Grado profesional en cine de animacion 3D, videojuegos e ilustracion" />
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
