--- a/app/Resources/views/desktop/courses/course_graphic_design_and_web.html.twig
+++ b/app/Resources/views/desktop/courses/course_graphic_design_and_web.html.twig
@@ -6,24 +6,24 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img1.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img3.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img2.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img4.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img3.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img1.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img3.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img2.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-graphic-design-and-web/img4.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"/></li>
                     </ul>
                 </div>
             </div>
@@ -56,14 +56,14 @@
                         Durante el curso los alumnos contaran con profesionales que les orientaran sobre las tendencias actuales y les ense&ntilde;aran los programas mas demandados del panorama laboral, de este modo estar&aacute;n totalmente preparados para diferentes puesto de trabajo dentro de la rama del dise&ntilde;o gr&aacute;fico.
                     </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}">
+                <a href="{{ asset('sboza2/docs/01-CURSO-DISEÑO-GRAFICO-Y-WEB-SBOZA2.pdf') }}" target="_blank"> <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/course-graphic-design-and-web/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/course-graphic-design-and-web/icon-course.svg') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
