--- a/app/Resources/views/desktop/courses/course_mobile_game.html.twig
+++ b/app/Resources/views/desktop/courses/course_mobile_game.html.twig
@@ -6,23 +6,23 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img1.png') }}" alt="Curso de videojuegos para dispositivos móviles" title="Curso de videojuegos para dispositivos móviles"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img3.png') }}" alt="Curso de videojuegos para dispositivos móviles" title="Curso de videojuegos para dispositivos móviles"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img2.png') }}" alt="Curso de videojuegos para dispositivos móviles" title="Curso de videojuegos para dispositivos móviles"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img4.png') }}" alt="Curso de videojuegos para dispositivos móviles" title="Curso de videojuegos para dispositivos móviles"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img1.png') }}" alt="Curso de videojuegos para dispositivos móviles" title="Curso de videojuegos para dispositivos móviles"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img2.png') }}" alt="Curso de videojuegos para dispositivos móviles" title="Curso de videojuegos para dispositivos móviles"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-mobile-game/img4.png') }}" alt="Curso de videojuegos para dispositivos móviles" title="Curso de videojuegos para dispositivos móviles"/></li>
                     </ul>
                 </div>
             </div>
@@ -57,14 +57,14 @@
                         La realizaci&oacute;n de videojuegos para dispositivos m&oacute;viles, en estos momentos es uno de los mercados creativos que m&aacute;s trabajo y auto trabajo esta generando, ya que permite la realizaci&oacute;n de un producto completo, con una m&iacute;nima inversi&oacute;n econ&oacute;mica y humana.
                     </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}">
+                <a href="{{ asset('sboza2/docs/06-CURSO-DE-VIDEOJUEGOS-PARA-DISPOSITIVOS-MOVILES.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Curso de videojuegos para dispositivos móviles" title="Curso de videojuegos para dispositivos móviles"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/course-mobile-game/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/course-mobile-game/icon-course.svg') }}" alt="Curso de videojuegos para dispositivos móviles" title="Curso de videojuegos para dispositivos móviles"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
