--- a/app/Resources/views/desktop/courses/course_motion_graphics.html.twig
+++ b/app/Resources/views/desktop/courses/course_motion_graphics.html.twig
@@ -6,23 +6,23 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img1.png') }}" alt="Curso de Motion Graphics" title="Curso de Motion Graphics"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img4.png') }}" alt="Curso de Motion Graphics" title="Curso de Motion Graphics"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img2.png') }}" alt="Curso de Motion Graphics" title="Curso de Motion Graphics"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img3.png') }}" alt="Curso de Motion Graphics" title="Curso de Motion Graphics"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img1.png') }}" alt="Curso de Motion Graphics" title="Curso de Motion Graphics"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img2.png') }}" alt="Curso de Motion Graphics" title="Curso de Motion Graphics"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img3.png') }}" alt="Curso de Motion Graphics" title="Curso de Motion Graphics"/></li>
                     </ul>
                 </div>
             </div>
@@ -67,14 +67,14 @@
                         A lo largo del curso el alumno afrontara la realizaci&oacute;n de diversas propuestas con diferente estilos gr&aacute;ficos, visuales y narrativos, lo que le permite disponer de distintas piezas para su bobina personal, herramienta imprescindible para saltar al mercado laboral con una experiencia demostrable.
                     </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}">
+                <a href="{{ asset('sboza2/docs/04-CURSO-DE-MOTION-GRAPHICS-SBOZA2.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-01.png') }}" alt="Curso de Motion Graphics" title="Curso de Motion Graphics"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/course-motion-graphic/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/course-motion-graphic/icon-course.svg') }}" alt="Curso de Motion Graphics" title="Curso de Motion Graphics"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
