--- a/app/Resources/views/desktop/courses/course_of_comic.html.twig
+++ b/app/Resources/views/desktop/courses/course_of_comic.html.twig
@@ -6,23 +6,23 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img1.png') }}" alt="Curso de comic sboza2" title="Curso de comic sboza2" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img3.png') }}" alt="Curso de comic sboza2" title="Curso de comic sboza2" /></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img2.png') }}" alt="Curso de comic sboza2" title="Curso de comic sboza2"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img4.png') }}" alt="Curso de comic sboza2" title="Curso de comic sboza2"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img1.png') }}" alt="Curso de comic sboza2" title="Curso de comic sboza2"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img2.png') }}" alt="Curso de comic sboza2" title="Curso de comic sboza2"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-of-comic/img4.png') }}" alt="Curso de comic sboza2" title="Curso de comic sboza2"/></li>
                     </ul>
                 </div>
             </div>
@@ -54,14 +54,14 @@
                         En sboza2 podr&aacute;s dibujar c&oacute;mics con diversos estilos y llegar a desarrollar una linea propia que te caracterice, as&iacute; como crear y ejecutar proyectos editoriales.
                     </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}">
+                <a href="{{ 'sboza2/docs/15-CURSO-COMIC-SBOZA2-GRANADA.pdf' }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Curso de comic sboza2" title="Curso de comic sboza2"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/course-of-comic/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/course-of-comic/icon-course.svg') }}" alt="Curso de comic sboza2" title="Curso de comic sboza2"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
