--- a/app/Resources/views/desktop/courses/course_web_programmer.html.twig
+++ b/app/Resources/views/desktop/courses/course_web_programmer.html.twig
@@ -6,23 +6,23 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img1.png') }}" alt="Curso superior de Programacón y desarrollo de aplicaciones web" title="Curso superior de Programacón y desarrollo de aplicaciones web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img3.png') }}" alt="Curso superior de Programacón y desarrollo de aplicaciones web" title="Curso superior de Programacón y desarrollo de aplicaciones web"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img2.png') }}" alt="Curso superior de Programacón y desarrollo de aplicaciones web" title="Curso superior de Programacón y desarrollo de aplicaciones web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img4.png') }}" alt="Curso superior de Programacón y desarrollo de aplicaciones web" title="Curso superior de Programacón y desarrollo de aplicaciones web"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img1.png') }}" alt="Curso superior de Programacón y desarrollo de aplicaciones web" title="Curso superior de Programacón y desarrollo de aplicaciones web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img2.png') }}" alt="Curso superior de Programacón y desarrollo de aplicaciones web" title="Curso superior de Programacón y desarrollo de aplicaciones web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-web-programmer/img4.png') }}" alt="Curso superior de Programacón y desarrollo de aplicaciones web" title="Curso superior de Programacón y desarrollo de aplicaciones web"/></li>
                     </ul>
                 </div>
             </div>
@@ -55,14 +55,14 @@
                         <br><br>
                         Al finalizar el curso estar&aacute;s preparado para abarcar cualquier proyectos profesional o personal, siendo capaz de resolver cualquier problema dando soluciones alternativas.                    </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}">
+               <a href="{{ asset('sboza2/docs/05-CURSO-SUPERIOR-DE-PROGRAMACION-Y-DESARROLLO-DE-APLICACIONES-WEB.pdf') }}"><img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Curso superior de Programacón y desarrollo de aplicaciones web" title="Curso superior de Programacón y desarrollo de aplicaciones web"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/course-web-programmer/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/course-web-programmer/icon-course.svg') }}" alt="Curso superior de Programacón y desarrollo de aplicaciones web" title="Curso superior de Programacón y desarrollo de aplicaciones web"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
