--- a/app/Resources/views/desktop/courses/master_concept_grafismo.html.twig
+++ b/app/Resources/views/desktop/courses/master_concept_grafismo.html.twig
@@ -6,24 +6,24 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img1.png') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img3.png') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img2.png') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img4.png') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img3.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img1.png') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img3.png') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img2.png') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-concept-grafismo/img4.png') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush"/></li>
                     </ul>
                 </div>
             </div>
@@ -56,14 +56,14 @@
                         <br><br>
                         Durante el curso podr&aacute;s crear un portafolio valido para ser presentado ante cualquier empresa del sector donde mostrar tus cualidades como artista gr&aacute;fico.                    </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}">
+                <a href="{{ asset('sboza2/docs/07-MASTER-EN-CONCEPT-Y-GRAFISMO-PARA-VIDEOJUEGOS-CON-ZBRUSH.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/master-concept-grafismo/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/master-concept-grafismo/icon-course.svg') }}" alt="Master en concept y grafismo para videojuegos con Zbrush" title="Master en concept y grafismo para videojuegos con Zbrush"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
