--- a/app/Resources/views/desktop/courses/master_editorial_design.html.twig
+++ b/app/Resources/views/desktop/courses/master_editorial_design.html.twig
@@ -6,24 +6,24 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img1.png') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img3.png') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img2.png') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img4.png') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img3.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img1.png') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img3.png') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img2.png') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img4.png') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"/></li>
                     </ul>
                 </div>
             </div>
@@ -67,14 +67,14 @@
                     </p>
 
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}">
+                <a href="{{ asset('sboza2/docs/02-MASTER-DE-DISENIO-EDITORIAL-PUBLICITARIO-OFICIAL-SBOZA2.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-01.png') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/master-editorial-design/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/master-editorial-design/icon-course.svg') }}" alt="Master de diseño editorial publicitario y diseño web" title="Master de diseño editorial publicitario y diseño web"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
