--- a/app/Resources/views/desktop/courses/master_infoarquitectura.html.twig
+++ b/app/Resources/views/desktop/courses/master_infoarquitectura.html.twig
@@ -6,24 +6,24 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img1.png') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img3.png') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img2.png') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img4.png') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img3.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img1.png') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img3.png') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img2.png') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-infoarquitectura/img4.png') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"/></li>
                     </ul>
                 </div>
             </div>
@@ -56,14 +56,14 @@
                         Al finalizar el curso estar&aacute;s totalmente preparado para tu incorporaci&oacute;n al mercado laboral, este m&aacute;ster termina con un proyecto final que te sera de ayuda, o como complemento en la b&uacute;squeda de nuevos clientes.                        <br><br>
                     </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}">
+                <a href="{{ asset('sboza2/docs/09-MASTER-DE-INFOARQUITECTURA-3D-E-INTERIORES-SBOZA2.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/master-infoarquitectura/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/master-infoarquitectura/icon-course.svg') }}" alt="Master en infoarquitectura 3D e interiores" title="Master en infoarquitectura 3D e interiores"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
