--- a/app/Resources/views/desktop/courses/porfolio_creation.html.twig
+++ b/app/Resources/views/desktop/courses/porfolio_creation.html.twig
@@ -6,24 +6,24 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img1.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img3.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img2.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img4.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img3.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img1.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img3.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img2.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/porfolio-creation/img4.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"/></li>
                     </ul>
                 </div>
             </div>
@@ -50,18 +50,18 @@
                         &iquest; PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
-                        Nuestra finalidad en el curso es realizar un portfolio personal a traves de la obtenci&oacute;n de Artes Finales de alta calidad, cuyos trabajos tendran un acabo profesional y competitivo, imprescindible para acceder al mercado laboral. El portfolio es para los profesionales la herramienta de presentaci&oacute;n que les permite competir con éxito, demostrando a sus futuros clientes la calidad de sus trabajos y la amplitud de sus conocimientos. El asesoramiento profesional de temas legales, as&iacute; como técnicas de entrevista son fundametales para obtener buenos resultados.
+                        Nuestra finalidad en el curso es realizar un portfolio personal a traves de la obtenci&oacute;n de Artes Finales de alta calidad, cuyos trabajos tendran un acabo profesional y competitivo, imprescindible para acceder al mercado laboral. El portfolio es para los profesionales la herramienta de presentaci&oacute;n que les permite competir con &eacute;xito, demostrando a sus futuros clientes la calidad de sus trabajos y la amplitud de sus conocimientos. El asesoramiento profesional de temas legales, as&iacute; como t&eacute;cnicas de entrevista son fundametales para obtener buenos resultados.
                         <br><br>
                         No podemos olvidar que en numerosas ocasiones la diferencia entre conseguir un buen trabajo o no, la marca la calidad del portfolio que se presenta, y c&oacute;mo lo presentemos.                    </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}">
+                <a href="{{ asset('sboza2/docs/10-MASTER-EN-CREACION-DE-PORTFOLIO.pdf') }}"> <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/porfolio-creation/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/porfolio-creation/icon-course.svg') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
