--- a/app/Resources/views/desktop/courses/superior_graphic_design.html.twig
+++ b/app/Resources/views/desktop/courses/superior_graphic_design.html.twig
@@ -6,23 +6,23 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img1.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img4.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img2.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img3.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img1.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img2.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img3.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"/></li>
                     </ul>
                 </div>
             </div>
@@ -68,14 +68,14 @@
                         Una vez finalizado el curso los conocimientos aprendidos te convertir&aacute;n en un profesional todoterreno capaz de dar soluciones a los proyectos planteados, llegando a estar totalmente capacitado para liderar un equipo creativo.
                     </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}">
+                <a href="{{ asset('sboza2/docs/03-CURSO-SUPERIOR-DE-DISEÑO-GRAFICO SBOZA2.pdf') }}" target="_blank"> <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/superior-graphic-design/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/superior-graphic-design/icon-course.svg') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
