--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -38,14 +38,14 @@
                     <ul>
                         <li><a href="{{ path('courseWebProgrammer') }}">- curso Superior de<br>
                                 Programaci&oacute;n y desarrollo de aplicaciones web</a></li>
-                        <li>- Master en<br>
-                            creaci&oacute;n de Porfolio</li>
-                        <li><a href="{{ path('courseCharacterizationFx') }}">- curso de<br>
+                        <li><a href="{{ path('porfolioCreation') }}">- Master en<br>
+                            creaci&oacute;n de Porfolio</a></li>
+                        <li><a href="">- curso de<br>
                                 Caracterizaci&oacute;n y Fx</a></li>
-                        <li>- curso de<br>
-                                Dibujo para tatuadores</li>
-                        <li>- curso superior de<br>
-                            Fotografia profesional</li>
+                        <li><a href="">- curso de<br>
+                                Dibujo para tatuadores</a></li>
+                        <li><a href="">- curso superior de<br>
+                            Fotografia profesional</a></li>
                     </ul>
                 </div>
                 <div class="fourth_column">
@@ -68,7 +68,7 @@
                         <p>...</p>
                     </div>
                     <ul>
-                        <li><a href="">- master en<br>
+                        <li><a href="{{ path('masterInfoarquitectura') }}">- master en<br>
                                 infoarquitectura 3D e interiores</a></li>
                         <li><a href="{{ path('grade3dFilm') }}"> - grado profesional en<br>
                                 cine de animaci&oacute;n 3D, videojuegos e ilustraci&oacute;n</a></li>
