--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -746,6 +746,7 @@ body{
     width: 59%;
     display: inline-block;
     padding-left: 13px;
+    color: #000;
     h3{
       font-family: "Bebas Neue", arial, sans-serif;
       font-size: 28px;
@@ -770,6 +771,7 @@ body{
 
   .copyright{
     padding-left: 13px;
+    color: #000;
   }
 
 }
