--- a/app/Resources/views/desktop/courses/course_ilustration_digital_traditional.html.twig
+++ b/app/Resources/views/desktop/courses/course_ilustration_digital_traditional.html.twig
@@ -66,7 +66,7 @@
                         Aprende a dominar las t&eacute;cnicas del dibujo, y los diferentes campos de la Ilustraci&oacute;n relacion&aacute;ndolas con las ultimas tecnolog&iacute;as en tratamientos del color tradicional y digital.
                     </p>
                 </div>
-                <a href="{{ asset('sboza2/docs/13-CURSO-SUPERIOR-DE-ILUSTRACION-TRADICIONAL-Y-DIGITAL.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-01.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital">
+                <a href="{{ asset('sboza2/docs/13-CURSO-SUPERIOR-DE-ILUSTRACION-TRADICIONAL-Y-DIGITAL.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-01.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"></a>
             </div>
         </div>
         <div class="footer_content_courser">
