--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -31,7 +31,7 @@
                 </div>
                 <div class="fourth_column">
                     <div class="header_courses">
-                        <h3 class="title">Varios</h3>
+                        <h3 class="title">Otros</h3>
                         <img src ="{{ asset('sboza2/img/icons/curso2.svg') }}">
                         <p>...</p>
                     </div>
